@@ -357,6 +357,7 @@ static int ci_tcp_connect_ul_start(ci_netif *ni, ci_tcp_state* ts,
     ci_tcp_initial_seqno(ni);
   ts->snd_max = tcp_snd_nxt(ts) + 1;
 
+  /* Must be after initialising snd_una. */
   ci_tcp_clear_rtt_timing(ts);
   ci_tcp_set_flags(ts, CI_TCP_FLAG_SYN);
   ts->tcpflags &=~ CI_TCPT_FLAG_OPT_MASK;
