@@ -453,6 +453,10 @@ int ci_tcp_listenq_try_promote(ci_netif* netif, ci_tcp_socket_listen* tls,
       ci_tcp_update_rtt(netif, ts,
                         ci_tcp_time_now(netif) - rxp->timestamp_echo);
     }
+    else {
+      /* Must be after initialising snd_una. */
+      ci_tcp_clear_rtt_timing(ts);
+    }
     /* SACK has nothing to be done. */
 
     /* ?? ECN */
